# my_frlio

./: README.md  loginfo.txt
config/: M2DGR_velodyne_HDL32E.yaml  M2DGR_velodyne_HDL32E_indoor.yaml  hilti_hesai_PandarXT32.yaml  hilti_ouster_OS064.yaml  labs_livox_avia.yaml  labs_livox_horizon.yaml  labs_livox_mid360.yaml  liosam_velodyne_VLP16.yaml  nclt_velodyne_HDL32E.yaml  newercollege_ouster_OS0.yaml  newercollege_ouster_OS0.yaml.autotune.bak  newercollege_ouster_OS0.yaml.bak_opt10  newercollege_ouster_OS1.yaml  ntuviral_ouster_OS1-16.yaml  ntuviral_ouster_OS1-16.yaml.initial.bak  r3live_livox_avia.yaml  urbanloco_CA_robosense_RSLIDAR32.yaml  urbanloco_HK_velodyne_HDL32E.yaml  urbannav_HK_velodyne_HDL32E.yaml  utbm_velodyne_HDL32E.yaml
debug/: debug_info.txt
devel/: .catkin  .rosinstall  local_setup.fish  setup.sh
log/: info.txt  low_freq_traj.txt  time_usage.txt
log/validate/: indoor_01_info.txt  indoor_01_time_usage.txt  indoor_01_traj.txt
ros_app/: CMakeLists.txt
ros_app/cmake/: ros.cmake
ros_app/format/: lidar_format_preprocessor_ros.hpp
ros_app/launch/: frlio_ros_offline_hilti_hesai_PandarXT32.launch  frlio_ros_offline_labs_livox_avia.launch  frlio_ros_offline_labs_livox_horizon.launch  frlio_ros_offline_liosam_velodyne_VLP16.launch  frlio_ros_offline_newercollege_ouster_OS0.launch  frlio_ros_offline_newercollege_ouster_OS1.launch  frlio_ros_offline_ntuviral_ouster_OS1-16.launch  frlio_ros_offline_r3live_livox_avia.launch  frlio_ros_offline_urbanloco_HK_velodyne_HDL32E.launch  frlio_ros_offline_urbannav_HK_velodyne_HDL32E.launch  frlio_ros_online.launch
ros_app/pause_tools/: pause_tools.hpp
ros_app/scripts/: frlio_ros_online_exec
ros_app/src/: frlio_ros_offline_evaluate.cpp  frlio_ros_online.cpp  rviz_config.rviz  rviz_tools.hpp
ros_app/visualization_tools/: rviz_tools_Interface.hpp
src/: CODEBASE_GUIDE.md
src/basic_element/: camera_intrinsic.hpp  extrinsic_group.hpp  state_group.hpp
src/format/: image_format_processor.hpp  imu_format_processor.hpp  lidar_format_processor.hpp
src/memory_pool/: custum_memory_pool.hpp
src/pointcloud_map/: rc_vox.hpp  rc_vox_map.hpp  rc_vox_map.yaml
src/sensor/: sensor_data.hpp  sensor_synchronizer.h
src/system/: associated_pair.hpp  fr_lio.h  fr_lio.yaml  fr_lio.yaml.initial.bak  imu_integration.h  lidar_motion_compensate_tool.h  subframe_lio.h
src/tools/: math_tools.hpp  time_tools.hpp  tools.hpp
src/vision/: rgb_keyframe_generation.hpp
